--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="C:\Users\lenovo\Documents\GitHub\dev-challenges\style.css">
         <title>All about lizards</title>
     </head>
-    <body>
+    <body topmargin="0" leftmargin="0" rightmargin="0">
         <header>
             <h1>All About Lizards</h1>
         </header>
         
         <main>
             <section class="main-content">
-                <img src="lizard.jpg" height=400px width=400px>
+                <img src="https://github.com/arriqaaq/dev-challenges/blob/c2/images/lizard.jpg?raw=true" height=400px width=400px>
 
                 <h2>About Lizards</h2>
                 <p>Lectus diam adipiscing faucibus consequat, auctor molestie a mauris. Cras libero risus ut enim, in purus tellus scelerisque. Nibh mattis dignissim lorem morbi molestie. Mauris elit at sociis varius leo, facilisis convallis quis. Facilisis velit, eget dolor sit arcu rhoncus urna quisque.</p>
